# real-estate-scrapers

./: .env.example  .gitignore  .mypy.ini  .pre-commit-config.yaml  .pylintrc  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
src/: .gitignore  db.example.cfg  scrapy.cfg
src/real_estate_scrapers/: __init__.py  format_checker.py  items.py  middlewares.py  models.py  pipelines.py  settings.py
src/real_estate_scrapers/concrete_items/: __init__.py  greek_acres_es.py  green_acres_gr.py  habita_com.py  immowelt.py  immowelt_at.py  immowelt_de.py  realo_be.py  realo_es.py  tospitimou_gr.py
src/real_estate_scrapers/database/: __init__.py  config.py  database.py
src/real_estate_scrapers/models/: __init__.py  db_models.py  models.py
src/real_estate_scrapers/pipelines/: __init__.py  duplicates_pipeline.py  postgres_pipeline.py
src/real_estate_scrapers/spiders/: __init__.py  real_estate_spider.py
tests/: test_format_checker.py  test_real_estate_scrapers.py
tests/database/: test_config.py
