[tool.poetry]
name = "real-estate-scrapers"
version = "0.1.0"
description = "Scrapers for real estate websites with an extensible API"
authors = ["Péter Ferenc Gyarmati <dev.petergy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Scrapy = "^2.5.1"
web-poet = "^0.1.1"
scrapy-poet = "^0.3.0"
psycopg2 = "^2.9.3"
SQLAlchemy = "^1.4.31"
loguru = "^0.6.0"
fake-useragent = {git = "https://github.com/danger89/fake-useragent.git", rev = "master"}
scrapy-selenium = {git = "https://github.com/peter-gy/scrapy-selenium.git", rev = "develop"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.12.2"
mypy = "^0.931"
isort = "^5.10.1"
pre-commit = "^2.17.0"
black = "^22.3.0"

[tool.black]
line-length = 120
target-version = ['py39']
exclude = '''
/(
    \.git
  | __pycache__
  | .pytest_cache
)/
'''

[tool.isort]
profile = "black"
line_length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
